--- a/nodejs-example-telemetry-api-extension/nodejs-example-telemetry-api-extension/package.json
+++ b/nodejs-example-telemetry-api-extension/nodejs-example-telemetry-api-extension/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "node-fetch": "^2.6.7",
-    "express": "^4.18.1"
+    "@aws-sdk/client-s3": "^3.620.0",
+    "express": "^4.18.1",
+    "node-fetch": "^2.6.7"
   }
 }
